@@ -13,11 +13,29 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile files("${System.getProperty('java.home')}/../lib/tools.jar")//non existent in java 9+
     compile group: 'fr.inria.gforge.spoon', name: 'spoon-core', version: '8.3.0-beta-9'
+    compile 'org.projectlombok:lombok:1.18.14'
+    annotationProcessor 'org.projectlombok:lombok:1.18.14'
 
 }
 tasks.withType(JavaCompile){
-    if(JavaVersion.current() != JavaVersion.VERSION_1_8){
-        options.compilerArgs.addAll(['--release', '8'])
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = 8
+        if(JavaVersion.current() != JavaVersion.VERSION_1_8){
+            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
+        }
+
+        doFirst{
+            options.compilerArgs = options.compilerArgs.findAll{it != '--enable-preview' }
+        }
+    }
+
+    tasks.withType(Javadoc){
+        options{
+            addStringOption('Xdoclint:none', '-quiet')
+            addBooleanOption('-enable-preview', true)
+            addStringOption('-release', '14')
+        }
     }
 }
 
